sqlc swag yaml
